# panorama-term

./: .gitignore  .prettierrc.json  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
public/: updater.json
scripts/: dev.ts  gen-icon.ts  sidecar.ts
sidecar/: index.ts
sidecar-rs/: Cargo.toml
sidecar-rs/src/: host.rs  main.rs
sidecar-rs/tests/: scrollback_offset.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  docker.rs  git.rs  lib.rs  main.rs  notes.rs
src/adapter/claude/: claude.client.ts
src/adapter/clipboard/: clipboard.client.ts
src/adapter/docker/: docker.client.ts
src/adapter/fs/: fs.client.ts
src/adapter/git/: git.client.ts
src/adapter/notes/: notes.client.ts
src/adapter/pty/: pty.client.ts  sidecar.client.ts
src/adapter/run/: run.client.ts
src/adapter/settings/: settings.client.ts
src/adapter/shell/: shell.client.ts
src/components/Canvas/: index.tsx  styles.module.scss
src/components/DiffViewer/: index.tsx  styles.module.scss
src/components/Terminal/: GridTerminal.tsx  index.tsx  styles.module.scss
src/domain/interfaces/: canvas.interface.ts  claude.interface.ts  diff.interface.ts  docker.interface.ts  git.interface.ts  pty.interface.ts  run.interface.ts  workspace.interface.ts
src/styles/: global.scss
src/usecase/hooks/: useAheadBehind.ts  useCanvas.ts  useRun.ts  useTerminal.ts  useUpdater.ts
src/usecase/service/: highlight.ts
src/usecase/util/: canvasStorage.ts  commitGraph.ts  (+29 more)
(+63 files in other folders)
