[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
portable-pty = "0.8"
vt100 = "0.16"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.dev.package.vt100]
overflow-checks = false

[profile.release]
opt-level = "s"
lto = true
strip = true
