[package]
name = "panorama"
version = "0.1.0"
description = "Infinite canvas of persistent terminal tiles"
edition = "2021"
license = "MIT"

[lib]
name = "panorama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
